--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,3 @@
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -13,7 +12,7 @@ ul {
 
 ul a {
     text-decoration: none;
-    color: white;
+    color: black;
     margin: 0 15px;
 }
 
@@ -29,6 +28,7 @@ input {
     background-color: transparent;
     color: black;
 }
+
 a{
     color: white;
     text-decoration: none;
@@ -38,6 +38,44 @@ a{
 
 }
 
+.options {
+    display: none;
+    position: fixed;
+    top: 35px;
+    right: 0px;
+    background-color: rgb(38, 191, 25);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    margin: 2rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+#dev-icon {
+    min-width: 1.875rem;
+    border-radius: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    float: right;
+    margin-right: 1rem;
+}
+
+#dev-icon>a{
+    color: black!important;
+}
+
+.home{
+    padding: 0;
+	margin: 0;
+	min-height: 40.625rem;
+	background-image: url(../img/slide1.jpg);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	animation: troca-imagem 15s ease-in-out infinite;
+}
+
 header{
     background-color: #26BF19;
     width: 100%; 
@@ -45,16 +83,16 @@ header{
     top: 0; 
 }
 
-#dev-icon {
-    height: 1.875rem;
-    width: 1.875rem;
-    border-radius: 100%;
-    background-image: url('img/natação.png');
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    float: right;
-    margin-top: 1rem;
-    margin-right: 1rem;
+@keyframes troca-imagem {
+	0% {background-image: url(../img/slide1.jpg);}
+	25% {background-image: url(../img/slide2.jpg);}
+    50% {background-image: url(../img/slide3.jpg);}
+    100% {background-image: url(../img/slide4.jpg);}
 }
+
+/*KEYFRAMES*/
+/* 
+@keyframes troca-imagem {
+	from {background-image: url(../img/slide1.jpg);}
+	to {background-image: url(../img/slide2.jpg);}
+} */
